--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,6 +11,6 @@
 		<title>Astro</title>
 	</head>
 	<body>
-		<h1>My Astro Site! It's here</h1>
+		<h1>My Astro Site! It's here mayne</h1>
 	</body>
 </html>
